# json2struct

./: Cargo.toml  README.md
src/: application_arguments.rs  cli_args.rs  json_parser.rs  main.rs
src/json2struct/: mod.rs
