[package]
name = "json2struct2"
version = "0.0.1"
authors = ["pfesenmeier <pfesenmeier@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Json 2 struct (fork of https://github.com/ptechen/json2struct.git)"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_derive = "1"
serde_json = "1"
heck = "0.3.1"
clap = { version = "3.0.5", features = ["derive"]}
